# gencast-gfs

./: GenCast-GFS-Pipeline  GenCast-SST-20251129-analysis.ipynb  bss_all_regions.py  crps_SP_june.py  jax_tut.ipynb  job.sh  new-ggs-august.sh  quantile.py
gencast-gfs/: ggfs-gera5-ens-crps.py  ggfs-sst-era5-ens-crps.py  ggs.sh
gencast-gfs/ai-models-gencast-gfs/: README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
gencast-gfs/ai-models-gencast-gfs/src/ai_models_gencast_gfs/: convert.py  input.py  model.py  output.py
gencast-gfs/ai-models-gencast-gfs/tests/: test_model_stub.py
