#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [
  "setuptools>=60",
]

[project]
name = "ai-models-gencast-gfs"
version = "0.0.1"


description = "An ai-models plugin scaffold to run a GenCast model on GFS data"
keywords = [
  "ai",
  "tools",
]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

requires-python = ">=3.10"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# JAX requirements are in requirements.txt

dependencies = [
  "ai-models-gfs",
  "ai-models-gencast>=0.0.6",
]

optional-dependencies.dev = [
  "pre-commit",
]
urls.Repository = "https://github.com/placeholder/ai-models-gencast-gfs"
entry-points."ai_models_gfs.model".gencast = "ai_models_gencast_gfs.model:model"
entry-points."ai_models_gfs.model"."gencast-0p25" = "ai_models_gencast_gfs.model:GenCast0p25deg"
entry-points."ai_models_gfs.model"."gencast-0p25-oper" = "ai_models_gencast_gfs.model:GenCast0p25degOper"
entry-points."ai_models_gfs.model"."gencast-1p00" = "ai_models_gencast_gfs.model:GenCast1p0deg"
entry-points."ai_models_gfs.model"."gencast-1p00-mini" = "ai_models_gencast_gfs.model:GenCast1p0degMini"
